Fixes low contrast admin nav bar in dark mode

--- a/src/themes/admin_default/assets/scss/fossbilling.scss
+++ b/src/themes/admin_default/assets/scss/fossbilling.scss
@@ -6,6 +6,10 @@
 @import "theme_settings";
 @import 'sortable-tablesort/dist/sortable-base.css';
 
+.sticky-nav .nav-link {
+  color: var(--tblr-body-color) !important;
+} /* Override to fix top nav bar text colour in dark mode. Can be removed if tabler fix issue */
+
 body {
     font-family: Verdana, sans-serif;
 }
